--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -13,5 +13,42 @@
   </head>
   <body>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script>
+      CMS.init({
+        config: {
+          backend: {
+            name: 'github',
+            repo: 'gadm21/me',
+            branch: 'main',
+            site_domain: 'gadgad.me',
+            base_url: 'https://decap-oauth.netlify.app'
+          },
+          media_folder: 'public/assets/img/blog',
+          public_folder: '/assets/img/blog',
+          collections: [
+            {
+              name: 'blog',
+              label: 'Blog Posts',
+              folder: 'src/data/blog-posts',
+              create: true,
+              slug: '{{slug}}',
+              extension: 'json',
+              format: 'json',
+              fields: [
+                { label: 'Title', name: 'title', widget: 'string' },
+                { label: 'Slug', name: 'slug', widget: 'string' },
+                { label: 'Category', name: 'category', widget: 'select', options: ['Research', 'Technology', 'Teaching', 'Personal'] },
+                { label: 'Publish Date', name: 'date', widget: 'datetime', format: 'YYYY-MM-DD' },
+                { label: 'Read Time (minutes)', name: 'readTime', widget: 'number', min: 1, max: 60 },
+                { label: 'Excerpt', name: 'excerpt', widget: 'text' },
+                { label: 'Featured Image', name: 'image', widget: 'image', required: false },
+                { label: 'Featured Post', name: 'featured', widget: 'boolean', default: false },
+                { label: 'Content', name: 'content', widget: 'markdown' }
+              ]
+            }
+          ]
+        }
+      });
+    </script>
   </body>
 </html>
