--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -5,50 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex" />
     <title>Content Manager | Gad's Portfolio</title>
-    <style>
-      body {
-        background: #1a1f1a;
-      }
-    </style>
   </head>
   <body>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-    <script>
-      CMS.init({
-        config: {
-          backend: {
-            name: 'github',
-            repo: 'gadm21/me',
-            branch: 'main',
-            site_domain: 'gadgad.me',
-            base_url: 'https://decap-oauth.netlify.app'
-          },
-          media_folder: 'public/assets/img/blog',
-          public_folder: '/assets/img/blog',
-          collections: [
-            {
-              name: 'blog',
-              label: 'Blog Posts',
-              folder: 'src/data/blog-posts',
-              create: true,
-              slug: '{{slug}}',
-              extension: 'json',
-              format: 'json',
-              fields: [
-                { label: 'Title', name: 'title', widget: 'string' },
-                { label: 'Slug', name: 'slug', widget: 'string' },
-                { label: 'Category', name: 'category', widget: 'select', options: ['Research', 'Technology', 'Teaching', 'Personal'] },
-                { label: 'Publish Date', name: 'date', widget: 'datetime', format: 'YYYY-MM-DD' },
-                { label: 'Read Time (minutes)', name: 'readTime', widget: 'number', min: 1, max: 60 },
-                { label: 'Excerpt', name: 'excerpt', widget: 'text' },
-                { label: 'Featured Image', name: 'image', widget: 'image', required: false },
-                { label: 'Featured Post', name: 'featured', widget: 'boolean', default: false },
-                { label: 'Content', name: 'content', widget: 'markdown' }
-              ]
-            }
-          ]
-        }
-      });
-    </script>
+    <script src="https://unpkg.com/netlify-cms@^2.10.0/dist/netlify-cms.js"></script>
   </body>
 </html>
